@@ -806,9 +806,7 @@ GM2-LIBS-ULM-MODS-STD  = \
                             Directories.mod               StdIO.mod \
               PipeIO.mod    Environment.mod               Storage.mod \
               M2RTS.mod     RTErrors.mod   Functions.mod  \
-              TimeIO.mod
-
-#   MathLib.mod
+              TimeIO.mod    MathLib.mod
 
 GM2-LIBS-ULM-MODS-SYS  = \
               Errno.mod     SysExec.mod     SysKill.mod   SysPause.mod \
